@@ -4,6 +4,7 @@ mailscripts (28-1) UNRELEASED; urgency=medium
     - new commands: mailscripts-git-format-patch-{attach,drafts}
     - new DWIM wrapper command: mailscripts-prepare-patch
     - rewrite short description and add a brief commentary
+    - load the notmuch library only when code that requires it is called
     - move the mailscripts customisation group into the mail group
     - add declarations to fix byte compilation warnings
     - fix usage of cl-case in an internal function.
